--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bayesGARCH
-Version: 2.1.2
-Date: 2017-01-12
+Version: 2.1.3
+Date: 2017-02-02
 Title: Bayesian Estimation of the GARCH(1,1) Model with Student-t Innovations
 Authors@R: person("David", "Ardia", role = c("aut", "cre"), email = "david.ardia.ch@gmail.com")
 Author: David Ardia [aut, cre]
@@ -9,6 +9,6 @@ Imports:
     mvtnorm,
     coda
 Description: Provides the bayesGARCH() function which performs the
-    Bayesian estimation of the GARCH(1,1) model with Student's t innovations.
+    Bayesian estimation of the GARCH(1,1) model with Student's t innovations as described in Ardia (2008) <doi:10.1007/978-3-540-78657-3>.
 License: GPL (>=2)
 RoxygenNote: 5.0.1
