--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: bayesGARCH
-Version: 2.1.3
-Date: 2017-02-02
+Version: 2.1.4
+Date: 2020-04-19
 Title: Bayesian Estimation of the GARCH(1,1) Model with Student-t Innovations
-Authors@R: person("David", "Ardia", role = c("aut", "cre"), email = "david.ardia.ch@gmail.com")
-Author: David Ardia [aut, cre]
+Authors@R: person("David", "Ardia", role = c("aut", "cre", "cph"),
+             email = "david.ardia.ch@gmail.com", comment = c(ORCID = "0000-0003-2823-782X"))
 Maintainer: David Ardia <david.ardia.ch@gmail.com>
 Imports:
     mvtnorm,
