--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: bayesGARCH
-Version: 2.1.5
-Date: 2020-04-20
-Title: Bayesian Estimation of the GARCH(1,1) Model with Student-t Innovations
+Version: 2.1.9
+Date: 2021-04-30
+Title: Bayesian Estimation of the GARCH(1,1) Model with Student-t
+        Innovations
 Authors@R: person("David", "Ardia", role = c("aut", "cre", "cph"),
              email = "david.ardia.ch@gmail.com", comment = c(ORCID = "0000-0003-2823-782X"))
 Maintainer: David Ardia <david.ardia.ch@gmail.com>
-Imports:
-    mvtnorm,
-    coda
+Imports: mvtnorm, coda
 Description: Provides the bayesGARCH() function which performs the
     Bayesian estimation of the GARCH(1,1) model with Student's t innovations as described in Ardia (2008) <doi:10.1007/978-3-540-78657-3>.
 BugReports: https://github.com/ArdiaD/bayesGARCH/issues
 URL: https://github.com/ArdiaD/bayesGARCH
-License: GPL (>=2)
+License: GPL (>= 2)
 RoxygenNote: 5.0.1
+NeedsCompilation: yes
+Author: David Ardia [aut, cre, cph] (<https://orcid.org/0000-0003-2823-782X>)
+Repository: CRAN
